creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/TaskDetailSettings__c.object-meta.xml
<CustomObject>
    <label>Task Detail Settings</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>TaskDetailSettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Detail Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>