creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/CheckboxGroupValues__c.field-meta.xml
<CustomField>
    <fullName>CheckboxGroupValues__c</fullName>
    <label>Checkbox Group Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>