creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/DisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>DisplaySequence__c</fullName>
    <label>DisplaySequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>