creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/FieldKey__c.field-meta.xml
<CustomField>
    <fullName>FieldKey__c</fullName>
    <label>FieldKey</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>