creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/FieldMask__c.field-meta.xml
<CustomField>
    <fullName>FieldMask__c</fullName>
    <label>FieldMask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>