creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <label>FieldType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Multi-picklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>CheckboxGroup</fullName>
            </value>
            <value>
                <fullName>RadioGroup</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>