creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/MappedField__c.field-meta.xml
<CustomField>
    <fullName>MappedField__c</fullName>
    <label>Mapped Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>