creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/NumberPrecision__c.field-meta.xml
<CustomField>
    <fullName>NumberPrecision__c</fullName>
    <label>Number Precision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>