creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <label>Picklist Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>