creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/RadioGroupValues__c.field-meta.xml
<CustomField>
    <fullName>RadioGroupValues__c</fullName>
    <label>Radio Group Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>