creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>RelatedObject__c</fullName>
    <label>Related Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>