creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/RequiredForProfiles__c.field-meta.xml
<CustomField>
    <fullName>RequiredForProfiles__c</fullName>
    <label>Required For Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[HOME] Analista de formalização</fullName>
            </value>
            <value>
                <fullName>[HOME] Analista de GCA</fullName>
            </value>
            <value>
                <fullName>[HOME] Consultor(a) de Fechamento</fullName>
            </value>
            <value>
                <fullName>[HOME] Coordenação de Fechamento</fullName>
            </value>
            <value>
                <fullName>[HOME] Especialista de contratos e assinaturas</fullName>
            </value>
            <value>
                <fullName>[HOME] Especialista de Fechamento</fullName>
            </value>
            <value>
                <fullName>[HOME] Especialista de formalização</fullName>
            </value>
            <value>
                <fullName>[HOME] Gerente de contrato e assinatura</fullName>
            </value>
            <value>
                <fullName>[HOME] Líder de Fechamento</fullName>
            </value>
            <value>
                <fullName>[HOME] Líder de formalização</fullName>
            </value>
            <value>
                <fullName>[HOME] Lider de GCA</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>[AUTOFIN] Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>