creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/fields/WorkflowKey__c.field-meta.xml
<CustomField>
    <fullName>WorkflowKey__c</fullName>
    <label>WorkflowKey</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>