creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/validationRules/teste.validationRule-meta.xml
<ValidationRule>
    <fullName>teste</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(FieldType__c, &apos;CheckboxGroup&apos;),
OR(
ISBLANK(CheckboxGroupValues__c),
NOT(ISBLANK(RelatedObject__c)),
NOT(ISBLANK(NumberPrecision__c)),
NOT(ISBLANK(PicklistValues__c)),
NOT(ISBLANK(FieldMask__c)),
NOT(ISBLANK(RadioGroupValues__c)))			
)</errorConditionFormula>
    <errorMessage>Obrigatório preencher SOMENTE o campo &quot;Checkbox Group Values&quot;.</errorMessage>
</ValidationRule>