creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FieldName__c</columns>
    <columns>FieldType__c</columns>
    <columns>TaskType__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>MappedField__c</columns>
    <columns>DisplaySequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>