creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>NAME</columns>
    <columns>FieldKey__c</columns>
    <columns>FieldName__c</columns>
    <columns>TaskType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
</ListView>