creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/listViews/Tarefas_de_Autofin.listView-meta.xml
<ListView>
    <fullName>Tarefas_de_Autofin</fullName>
    <columns>Product__c</columns>
    <columns>TaskType__c</columns>
    <columns>NAME</columns>
    <columns>DisplaySequence__c</columns>
    <columns>FieldName__c</columns>
    <columns>FieldType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>AUTOFIN</value>
    </filters>
    <label>Tarefas de Autofin</label>
</ListView>