creditas-sf/force-app/main/default/objects/TaskDetailSettings__c/listViews/TaskDetail_HOME.listView-meta.xml
<ListView>
    <fullName>TaskDetail_HOME</fullName>
    <columns>NAME</columns>
    <columns>TaskType__c</columns>
    <columns>FieldName__c</columns>
    <columns>FieldType__c</columns>
    <columns>MappedField__c</columns>
    <columns>DisplaySequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>HOME</value>
    </filters>
    <label>Detalhes das Tarefas de HOME</label>
</ListView>